@@ -1,7 +1,14 @@
+2010-07-02  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclExecute.c (IllegalExprOperandType): [Bug 3024379]: Made
+	sure that errors caused by an argument to an operator being outside
+	the domain of the operator all result in ::errorCode being ARITH
+	DOMAIN and not NONE.
+
 2010-07-02  Jan Nijtmans  <nijtmans@users.sf.net>
 
-	* generic/tclIntDecls.h [Bug #803489] Tcl_FindNamespace problem in the
-	Stubs table
+	* generic/tclIntDecls.h: [Bug 803489]: Tcl_FindNamespace problem in
+	the Stubs table.
 
 2010-07-01  Donal K. Fellows  <dkf@users.sf.net>
 
